--- a/templates/listajuegos.html
+++ b/templates/listajuegos.html
@@ -1,1 +1,28 @@
-
+{% extends "base.html" %}
+{% block title %}Lista de juegos{% endblock %}
+{% block contenido %}
+	<div class="inner">
+		<header>
+			<h2>LISTA JUEGOS MSX</h2>
+		</header>
+		<div class="inner" id="formulario">
+			<section>
+                <h3>Juegos</h3>
+                <table>
+                    <tr>
+                        <td>Nombres</td>
+                        <td>Desarrolladores</td>
+                        <td>Más información</td>
+                    </tr>
+                    {% for elem in juegos -%}
+                    <tr>
+                        <td><strong>{{elem[0]}}</strong></td>
+                        <td><strong>{{elem[1]}}</strong></td>
+                        <td><u><a href="/juego/{{elem[2]}}">detalle</a></u></td>
+                    </tr>
+                    {% endfor -%}
+                </table>
+			</section>
+		</div>
+	</div>
+{% endblock %}
